<resources>
    <string name="app_name">Demo</string>
    <string name="sign_in">Sign-In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="email_id">Email id</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_address">Full Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_fill_the_form">Please fill the form</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign-Up now.</string>
    <string name="forgot_passsword">Forgot Passsword?</string>
    <string name="already_have_an_account_sign_in_now">Already have an account? Sign-In now</string>
    <string name="dashboard">Dashboard</string>
</resources>
