<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="#D0634C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/full_address"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/etContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/etEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/age"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account_sign_in_now"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>